--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,10 @@ perl:
   - "5.24"
   - "5.8"
 
-cpanm --quiet --installdeps --notest .
+before_install:
+  - cpanm DBI
+  - cpanm Exporter
+
+install:
+  cpanm --quiet --installdeps --notest .
 
