Added SQLite driver?

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_install:
   - cpanm DBI
   - cpanm Exporter
   - cpanm lib
+  - cpanm DBD::SQLite
 
 install:
   cpanm --quiet --installdeps --notest .
