--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -20,6 +20,9 @@ provides:
   Names:
     file: lib/Names.pm
     version: '0.01'
+  Person:
+    file: lib/Person.pm
+    version: '0.01'
 resources:
   license: http://www.opensource.org/licenses/mit-license.php
 version: '0.01'
