--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -14,6 +14,9 @@ meta-spec:
   version: '1.4'
 name: Dice
 provides:
+  Crew:
+    file: lib/Crew.pm
+    version: '0.01'
   Dice:
     file: lib/Dice.pm
     version: '0.01'
