Draft ship_as_obj.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - cpanm Exporter
   - cpanm lib
   - cpanm DBD::SQLite
+  - cpanm Test::Kwalitee
 
 install:
   cpanm --quiet --installdeps --notest .
