--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -17,9 +17,9 @@ provides:
   Crew:
     file: lib/Crew.pm
     version: '0.01'
-  Dice:
-    file: lib/Dice.pm
-    version: '0.01'
+  FTL_FleetOps::Dice:
+    file: lib/FTL_FleetOps/Dice.pm
+    version: '0.02'
   FTL_FleetOps::Ship:
     file: lib/FTL_FleetOps/Ship.pm
     version: '0.02'
